Feature #13271
Update the Silverpeas Component's POM for Jakarta EE 10.
Migrate Almanach to Jakarta EE 10
Migrate Blog to Jakarta EE 10
Migrate Classifieds to Jakarta EE 10
Migrate Community to Jakarta EE 10
Migrate DataWarning to Jakarta EE 10
Migrate DelegatedNews to Jakarta EE 10
Migrate FormsOnline to Jakarta EE 10
Migrate Forums to Jakarta EE 10
Migrate Gallery to Jakarta EE 10
Migrate Hyperlink to Jakarta EE 10
Migrate InfoLetter to Jakarta EE 10
Migrate JdbcConnector to Jakarta EE 10
Migrate Kmelia to Jakarta EE 10
Migrate MailingList to Jakarta EE 10
Migrate MyDB to Jakarta EE 10.
Migrate OrganizationalChart to Jakarta EE 10.
Migrate ProcessManager to Jakarta EE 10.
Migrate ProjectManager to Jakarta EE 10.
Migrate WhitePages to Jakarta EE 10.
Migrate QuestionReply to Jakarta EE 10.
Migrate QuickInfo to Jakarta EE 10.
Migrate Quizz to Jakarta EE 10.
Migrate ResourceManager to Jakarta EE 10.
Migrate RssAggregator to Jakarta EE 10.
Migrate ScheduleEvent to Jakarta EE 10.
Migrate SilverCrawler to Jakarta EE 10.
Migrate SpaceMembers to Jakarta EE 10.
Migrate SuggestionBox to Jakarta EE 10.
Migrate Survey to Jakarta EE 10.
Migrate WebPages to Jakarta EE 10.
Migrate the deprecated WebSites to Jakarta EE 10.
Migrate YellowPages to Jakarta EE 10.